# Video-Editing-Automation

./: .gitignore  meson.build
examples/: meson.build  random-splice.c  test-clip-decode.c  test-clip-encode.c  test-clip.c  test-sequence-decode.c  test-sequence-encode.c  test-sequence.c
examples/ffmpeg/: demuxing_decoding.c  muxing.c  solidColor.c
include/: Clip.h  ClipDecode.h  ClipEncode.h  LinkedListAPI.h  OutputContext.h  OutputContextStructs.h  RandomSplice.h  Sequence.h  SequenceDecode.h  SequenceEncode.h  Util.h  VideoContext.h
src/: Clip.c  ClipDecode.c  ClipEncode.c  LinkedListAPI.c  OutputContext.c  Sequence.c  SequenceDecode.c  SequenceEncode.c  Timebase.c  Util.c  VideoContext.c
